<?xml version="1.0"?>
<package format="3">
  <name>joy_command</name>
  <version>0.1.0</version>
  <description>Joy Command</description>

  <maintainer email="babaryusei.kw@gmail.com">Ryusei Baba</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
